Prevented modal scrolling. Fixed z-index bug with modal on mobile. Fixed image width issue on IE11 in modal.

--- a/src/styles/modules/product-images.module.css
+++ b/src/styles/modules/product-images.module.css
@@ -25,6 +25,7 @@
   background: rgba(0, 0, 0, 0.7);
   opacity: 0;
   transition: opacity 0.3s, transform 0s 0.3s;
+  z-index: 1;
 
   &[data-active="true"] {
     transform: translateY(100%);
@@ -55,15 +56,12 @@
 .carouselSlide {
   flex: 0 0 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 0 10%;
   position: relative;
 }
 .carouselImage {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .carouselPrev,
 .carouselNext {
