--- a/src/styles/parts/layout.css
+++ b/src/styles/parts/layout.css
@@ -10,6 +10,9 @@ body {
   background: var(--pale-peach);
   padding: 40px 20px;
 }
+:global .modal-open {
+  overflow: hidden;
+}
 body:before {
   content: "mobile";
   position: fixed;
